--- a/CleanerUsage/CleanerUsage.csproj
+++ b/CleanerUsage/CleanerUsage.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\CleanerLibrary\CleanerLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
